# words_indexing

./: CMakeLists.txt  ParallelQueue.h  main.cpp  reading.cpp  reading.h  script.py  time.h
